--- a/lesson-3/css/main.css
+++ b/lesson-3/css/main.css
@@ -12,6 +12,69 @@
     margin: 50px auto 0;
     border: 2px solid gray;
 }
-
+.layout-1, .layout-2, .layout-3, .layout-4, .layout-5 {
+  width: 100px;
+  height: 100px;
+  background-color: black;
+  color: white;
+}
 
 /* CSS FILE COMMENTS [ INLINE ] */
+
+/*LAYOUT 1*/
+.flex-container {
+  display: flex;
+}
+#divhide {
+  flex-grow: 1;
+  background-color: white;
+}
+.div2.layout-1 {
+  margin-right: 1%;
+}
+/*LAYOUT 2*/
+.flex-containerL2 {
+  display: flex;
+  flex-direction: column;
+}
+.div2.layout-2 {
+  align-self: center;
+}
+.div3.layout-2 {
+  align-self: flex-end;
+}
+/*LAYOUT 3*/
+.flex-containerL3 {
+  display: flex;
+  justify-content: center;
+}
+.div1.layout-3 {
+  background: grey;
+  padding: 6%;
+  
+}
+.div2.layout-3 {
+  display: flex;
+}
+/*LAYOUT 3*/
+.flex-containerL4 {
+  display: flex;
+  flex-direction: column;
+  
+}
+.div2.layout-4 {
+  background-color: grey;
+  margin: -50px 0 0 50px;
+}
+
+/*LAYOUT 2*/
+.flex-containerL5 {
+  display: flex;
+  flex-direction: column;
+}
+.div2.layout-5 {
+  align-self: center;
+}
+.div1.layout-5 {
+  align-self: flex-end;
+}
